--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                     <div class = "box">
 
-                        <p><a href="http://localhost:8081/formulario"> Cadastre Sua Conta</a href></p>
+                        <p><a href="https://heeelflip.github.io/CRUD-Cadastro-de-jogadores/formulario"> Cadastre Sua Conta</a href></p>
                         <p><a href="http://localhost:8081/listar"> Ver Perfil</a href></p>  
 
                     </div> 
